feat: udistrital/sga_documentacion#22 Refactorización imports, gitignore, nombre endpoints
