# swagger/swagger.yml
@@ -11,6 +11,42 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 basePath: /v1
 paths:
+  /actividad_calendario/:
+    post:
+      tags:
+      - actividad_calendario
+      description: Agregar actividad calendario, tipo_publico y tabla de rompimiento calendario_evento_tipo_publico
+      operationId: ActividadCalendarioController.PostActividadCalendario
+      parameters:
+      - in: body
+        name: body
+        description: body Agregar Actividad calendario content
+        required: true
+        schema:
+          $ref: '#/definitions/{}'
+      responses:
+        "200":
+          description: '{}'
+        "403":
+          description: body is empty
+  /actividad_calendario/update/{id}:
+    put:
+      tags:
+      - actividad_calendario
+      description: Actualiza tabla de rompimiento calendario_evento_tipo_publico segun los responsables de una Actividad
+      operationId: ActividadCalendarioController.UpdateActividadResponsables
+      parameters:
+      - in: body
+        name: body
+        description: body Actualizar responsables de una Actividad content
+        required: true
+        schema:
+          $ref: '#/definitions/{}'
+      responses:
+        "200":
+          description: '{}'
+        "403":
+          description: body is empty
   /calendario_academico/:
     get:
       tags:
@@ -124,6 +160,47 @@ paths:
           description: '{}'
         "404":
           description: not found resource
+  /calendario_proyecto/{id}:
+    get:
+      tags:
+      - calendario_proyecto
+      description: get ConsultaCalendarioAcademico by id
+      operationId: ConsultaCalendarioProyectoController.GetCalendarByProjectId
+      parameters:
+      - in: path
+        name: id
+        description: The key for staticblock
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+        "403":
+          description: :id is empty
+  /calendario_proyecto/nivel/{idNiv}/periodo/{idPer}:
+    get:
+      tags:
+      - calendario_proyecto
+      description: get ConsultaCalendarioAcademico & id y Project By Id
+      operationId: ConsultaCalendarioProyectoController.GetCalendarProject
+      parameters:
+      - in: path
+        name: idNiv
+        description: Id nivel
+        required: true
+        type: integer
+        format: int64
+      - in: path
+        name: :idNiv
+        description: Id periodo
+        required: true
+        type: integer
+        format: int64
+      responses:
+        "200":
+          description: ""
+        "403":
+          description: :id is empty
   /clonar_calendario/:
     post:
       tags:
@@ -178,83 +255,6 @@ paths:
           description: '{}'
         "400":
           description: the request contains incorrect syntax
-  /consulta_calendario_proyecto/{id}:
-    get:
-      tags:
-      - consulta_calendario_proyecto
-      description: get ConsultaCalendarioAcademico by id
-      operationId: ConsultaCalendarioProyectoController.GetCalendarByProjectId
-      parameters:
-      - in: path
-        name: id
-        description: The key for staticblock
-        required: true
-        type: string
-      responses:
-        "200":
-          description: ""
-        "403":
-          description: :id is empty
-  /consulta_calendario_proyecto/nivel/{idNiv}/periodo/{idPer}:
-    get:
-      tags:
-      - consulta_calendario_proyecto
-      description: get ConsultaCalendarioAcademico & id y Project By Id
-      operationId: ConsultaCalendarioProyectoController.GetCalendarProject
-      parameters:
-      - in: path
-        name: idNiv
-        description: Id nivel
-        required: true
-        type: integer
-        format: int64
-      - in: path
-        name: :idNiv
-        description: Id periodo
-        required: true
-        type: integer
-        format: int64
-      responses:
-        "200":
-          description: ""
-        "403":
-          description: :id is empty
-  /crear_actividad_calendario/:
-    post:
-      tags:
-      - crear_actividad_calendario
-      description: Agregar actividad calendario, tipo_publico y tabla de rompimiento calendario_evento_tipo_publico
-      operationId: ActividadCalendarioController.PostActividadCalendario
-      parameters:
-      - in: body
-        name: body
-        description: body Agregar Actividad calendario content
-        required: true
-        schema:
-          $ref: '#/definitions/{}'
-      responses:
-        "200":
-          description: '{}'
-        "403":
-          description: body is empty
-  /crear_actividad_calendario/update/{id}:
-    put:
-      tags:
-      - crear_actividad_calendario
-      description: Actualiza tabla de rompimiento calendario_evento_tipo_publico segun los responsables de una Actividad
-      operationId: ActividadCalendarioController.UpdateActividadResponsables
-      parameters:
-      - in: body
-        name: body
-        description: body Actualizar responsables de una Actividad content
-        required: true
-        schema:
-          $ref: '#/definitions/{}'
-      responses:
-        "200":
-          description: '{}'
-        "403":
-          description: body is empty
   /evento/:
     post:
       tags:
